# discord-rpc-app

./: .gitmodules  Cargo.toml  README.md  note.txt  package.json
sup_discord_app/: package.json
sup_discord_app/src/: main.tsx
sup_discord_app/src-tauri/: Cargo.toml  tauri.conf.json
sup_discord_app/src-tauri/src/: main.rs  models.rs
sup_discord_app/src-tauri/src/plugins/: mod.rs  windows_taskbar.rs
vendors/sup_common/: Cargo.toml  README.md
vendors/sup_common/src/: lib.rs
