[package]
name = "sup_discord_app"
version = "0.1.0"
description = "A Tauri App"
authors = ["SUP2Ak"]
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sup_discord_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
sup_drpc = { path = "../../vendors/sup_drpc" }
sup_mtracker = { path = "../../vendors/sup_mtracker" }
sup_common = { path = "../../vendors/sup_common" }
tauri = { version = "2.8.5", features = [] }
tauri-plugin-opener = "2"
# Dépendances communes (versions synchronisées avec sup_common)
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["rt", "time", "macros", "sync"] }
dirs = "6.0.0"
uuid = { version = "1.18.1", features = ["v4"] }
chrono = { version = "0.4.41", features = ["serde"] }
regex = "1.11.2"
anyhow = "1.0.99"
